[gd_scene load_steps=10 format=3 uid="uid://dvif5qtobje32"]

[ext_resource type="Script" path="res://Scripts/DropdownScript.gd" id="1_siji5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gu4g2"]
content_margin_top = 50.0
bg_color = Color(0.172549, 0.454902, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ikoo2"]
font_size = 60

[sub_resource type="Theme" id="Theme_pbu2u"]
default_font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_wc57i"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_mujfo"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdl5n"]
bg_color = Color(0.129412, 0.239216, 0.458824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jlprm"]
font_size = 25

[sub_resource type="StyleBoxLine" id="StyleBoxLine_atojw"]
color = Color(1, 1, 1, 1)
thickness = 3

[node name="Main" type="Node2D"]
script = ExtResource("1_siji5")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1155.0
offset_bottom = 660.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gu4g2")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Pick Your Role!"
label_settings = SubResource("LabelSettings_ikoo2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="dropdown" type="OptionButton" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_pbu2u")
theme_override_font_sizes/font_size = 35
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="RoleText" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Role"
label_settings = SubResource("LabelSettings_wc57i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionText" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "Description"
label_settings = SubResource("LabelSettings_mujfo")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jdl5n")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Skills"
label_settings = SubResource("LabelSettings_jlprm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_atojw")

[node name="SkillContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[connection signal="item_selected" from="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/dropdown" to="." method="_on_option_button_item_selected"]
